chore: Make title check work as a merge_group check

--- a/.github/workflows/pr-title.yml
+++ b/.github/workflows/pr-title.yml
@@ -1,6 +1,7 @@
 name: Check PR title for commit convention
 
 on:
+  merge_group:
   pull_request:
     types: [opened, edited]
 
@@ -12,6 +13,6 @@ jobs:
         uses: actions/github-script@v6
         with:
           script: |
-            if (!/^(feat|fix|doc|style|refactor|test|chore|perf): .*[^.]($|\n\n)/.test(context.payload.pull_request.title)) {
+            if (!/^(feat|fix|doc|style|refactor|test|chore|perf): .*[^.]($|\n\n)/.test(context.payload.pull_request.title || context.payload.merge_group.head_commit.message)) {
               core.setFailed('PR title does not follow the Commit Convention (https://leanprover.github.io/lean4/doc/dev/commit_convention.html).');
             }
