--- a/.github/workflows/pr-title.yml
+++ b/.github/workflows/pr-title.yml
@@ -15,6 +15,7 @@ jobs:
           script: |
             const msg = if (context.payload.pull_request) { context.payload.pull_request.title }
                else { context.payload.merge_group.head_commit.message };
+            console.log(`Message: ${msg}`)
             if (!/^(feat|fix|doc|style|refactor|test|chore|perf): .*[^.]($|\n\n)/.test(msg)) {
               core.setFailed('PR title does not follow the Commit Convention (https://leanprover.github.io/lean4/doc/dev/commit_convention.html).');
             }
